# voice-piece

./: CLAUDE.md  Cargo.toml  DESIGN.md  README.md
.github/workflows/: build-windows.yml  release.yml
KoeApp/: project.yml
KoeApp/Koe/: Info.plist
KoeApp/Koe/AppDelegate/: SPAppDelegate.h  SPAppDelegate.m
KoeApp/Koe/Audio/: SPAudioCaptureManager.m
KoeApp/Koe/Bridge/: SPRustBridge.h  SPRustBridge.m
KoeApp/Koe/Overlay/: SPOverlayPanel.h  SPOverlayPanel.m
KoeApp/Koe/SetupWizard/: SPSetupWizardWindowController.m
KoeApp/Koe/StatusBar/: SPStatusBarManager.h  SPStatusBarManager.m
KoeApp/Koe/Update/: SPUpdateManager.h  SPUpdateManager.m
docs/: update-feed.json
koe-asr/: Cargo.toml
koe-asr/src/: config.rs  doubao.rs  lib.rs  proxy.rs  qwen.rs
koe-core/: Cargo.toml  build.rs
koe-core/src/: config.rs  ffi.rs  lib.rs
koe-core/src/llm/: openai_compatible.rs
koe-win/: Cargo.toml
koe-win/src/: audio.rs  bridge.rs  clipboard.rs  hotkey.rs  logging.rs  main.rs  overlay.rs  paste.rs  tray.rs
