[package]
name = "koe-win"
version = "0.1.0"
edition = "2021"
description = "Koe voice input tool - Windows shell"

[[bin]]
name = "koe"
path = "src/main.rs"

[dependencies]
koe-core = { path = "../koe-core" }
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_DataExchange",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_Globalization",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
]
